@@ -7,19 +7,3 @@ body>header form input[name="query"]:-moz-placeholder
 {
 	color: #666666;
 }
-
-.read #body.vertical>div
-{
-	right: -551px;
-	height: 925px;
-	width: 519px;
-	-moz-transform: rotate(90deg);
-	-moz-transform-origin: 0% 0%;
-	letter-spacing: 1px;
-	line-height: 160%;
-}
-
-.read #body.vertical img
-{
-	-moz-transform: rotate(-90deg);
-}
