@@ -6,7 +6,7 @@
 	-o-transform: rotate(90deg);
 	-o-transform-origin: 0% 0%;
 	letter-spacing: 1px;
-	line-height: 180%;
+	line-height: 140%;
 }
 
 .read #body.vertical img
